--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,13 @@
-html,
-body,
-#root {
-  height: 100%;
+body {
   margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-#root {
-  display: flex;
-  flex-direction: column;
-}
-
-/* Global heading styles for consistency */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
